@@ -16,6 +16,7 @@ main (int argc, char *argv[])
   size_t i;
   size_t n = 0;
   double mu = 1;
+  double a = 1;
   const char * name ;
   double x;
   gsl_rng * r ;
@@ -31,14 +32,19 @@ main (int argc, char *argv[])
 
   name = argv[1] ;
   n = strtol (argv[2], NULL, 0);
+
+#define NAME(x) !strcmp(name,(x))
     
-  if (!strcmp(name,"exponential"))
+  if (NAME("exponential"))
     {
-      check_args (name, 1, "mu
       for (i = 0; i < n; i++)
 	printf("%g\n",gsl_ran_exponential (r, mu));
     }
-
+  else if (NAME("levy"))
+    {
+      for (i = 0; i < n; i++)
+	printf("%g\n",gsl_ran_levy (r, mu, a));
+    }
 
   return 0 ;
 }
